finish user curd
